--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -38,6 +38,9 @@ ul{
     padding: 0;
     list-style: none;
 }
+.h2{
+  font-weight: normal;
+}
 .h3{
     margin-bottom: 1rem;
     text-align: center;
@@ -46,13 +49,13 @@ ul{
 }
 
 @media (max-width: 768px) {
-  .main-content{
+  #main-content{
     padding: 1rem .5rem;
   }
 }
 
 @media (min-width: 769px) {
-  .main-content{
+  #main-content{
     padding: 2rem 4rem;
   }
 }
@@ -260,6 +263,9 @@ footer div span{
 .align-center{
     text-align: center;
 }
+.color-blue{
+  color: #516BFC;
+}
 
 @media (max-width: 768px) {
     .display-none-mobile {
@@ -281,8 +287,6 @@ footer div span{
         padding: 0 1.2rem;
     }
 }
-
-
 
 /* index */
 .oshirase_tag{
