--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -38,14 +38,8 @@ ul{
     padding: 0;
     list-style: none;
 }
-h2{
+h2,h3{
   font-weight: normal;
-}
-h3{
-    margin-bottom: 1rem;
-    text-align: center;
-    border-bottom: 1px solid #999;
-    padding-bottom: .3rem;
 }
 
 @media (max-width: 768px) {
@@ -266,7 +260,7 @@ footer div span{
 .color-blue{
   color: #516BFC;
 }
-.color-blue{
+.color-green{
   color: #3D6F04;
 }
 
