--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -40,11 +40,12 @@ ul{
 }
 h2,h3{
   font-weight: normal;
+  padding: .5rem 0;
 }
 
 @media (max-width: 768px) {
   #main-content{
-    padding: 1rem .5rem;
+    padding: 1rem;
   }
 }
 
