--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -276,9 +276,6 @@ footer div span{
     #body .padding-0-05-mobile{
         padding: 0 .5rem;
     }
-    .padding-0-1-mobile{
-      padding: 0 1rem;
-    }
 }
 
 @media (min-width: 769px) {
@@ -287,6 +284,9 @@ footer div span{
     }
     #body .padding-0-12-pc{
         padding: 0 1.2rem;
+    }
+    .padding-0-1-pc{
+      padding: 0 1rem;
     }
 }
 
