--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -38,7 +38,7 @@ ul{
     padding: 0;
     list-style: none;
 }
-body h2,body h3{
+#body h2,#body h3{
   font-weight: normal;
   padding: .5rem 0;
 }
