--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -125,7 +125,6 @@ footer div span{
     cursor: pointer;
     right: .5rem;
     z-index: 999;
-    background-color: black;
     border-radius: 32px;
     position: absolute;
     margin: 1.9rem 0 0 auto;
@@ -163,10 +162,10 @@ footer div span{
 }
 
 .menu-trigger span:nth-of-type(4) {
-    color: white;
+    color: #333;
     background-color: rgb(255,255,255,0);
-    left: 14px;
-    top: 35px;
+    left: 16px;
+    top: 34px;
     font-size: .8rem;
 }
 .menu-trigger.active span:nth-of-type(4) {
