--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -140,7 +140,7 @@ footer div span{
     transition: all .5s;
 }
 .menu-trigger.active span {
-    background-color: white;
+    background-color: #333;
 }
 .menu-trigger span:nth-of-type(1) {
     top: 15px;
