--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -100,6 +100,7 @@ footer div span{
     padding-bottom: .5rem;
     z-index: 999;
     position: fixed;
+    display: block;
 }
 .menu > div{
     border-right: .5px solid #999;
