--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -194,7 +194,7 @@ footer div span{
 }
 .menu-container .menu {
     border: 1px solid #ccc;
-    display: flex;
+    display: block;
     justify-content: space-between;
     list-style: none;
     margin: 0;
