--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -10,6 +10,7 @@ discografy
 information
 profile
 payment
+reserve
 */
 
 /* gridlex */
@@ -314,12 +315,6 @@ footer div span{
   color: #0F3776;
 }
 
-@media (max-width: 768px) {
-}
-
-@media (min-width: 769px) {
-}
-
 
 
 /* discografy */
@@ -397,65 +392,15 @@ footer div span{
     margin: 0 auto;
 }
 
-
-
-/* payment */
-.raised{
-  display: inline-block;
-  background-color: #26a69b;
-  color: #FFF;
-  font-size: 1em;
-  line-height: 1;
-  text-decoration: none;
-  letter-spacing: 0.05em;
-  padding: 0.2em 1em;
-  border-radius: 3px;
-    cursor: pointer;
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
-  -webkit-tap-highlight-color: transparent;
-  transition: .3s ease-out;
-}
-
-.raised:hover{
-    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14), 0 1px 7px 0 rgba(0,0,0,0.12), 0 3px 1px -1px rgba(0,0,0,0.2);
-}
-
-.mfp-content {
-width: 100%;
-overflow: auto;
--webkit-overflow-scrolling: touch;
-}
-.mfp-content iframe {
-  width: 100%;
-}
-
-.mfp-close{
-  margin-right: .5rem;
-  margin-top: 1rem;
-}
-.popup-image{
-  border-radius: 3px;
-  background-color: #C1E4A5;
-  cursor: pointer;
-}
-.popup-image:hover{
-  box-shadow: 2px 2px 5px #666;
-  filter: brightness(105%);
-}
-.banner{
-  font-size: .7rem;
-}
-
-#omise-popup{
-  max-width: 40rem;
-  margin: auto;
-}
-
-@media (max-width:768px) {
-  .banner{
-    font-size: .9rem;
+/*reserve*/
+@media (max-width: 768px) {
+  .iframe{
+    width: 100%;
   }
-  #omise-popup{
-    margin: 1rem .5rem;
+}
+
+@media (min-width: 769px) {
+  .iframe{
+    width: 70%;
   }
 }
