--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -129,7 +129,7 @@ footer div span{
     z-index: 999;
     border-radius: 32px;
     position: absolute;
-    margin: 1.9rem 0 0 auto;
+    margin: 9% 0 0 auto;
     top: 0;
 }
 .menu-trigger span {
@@ -289,6 +289,9 @@ footer div span{
     #body .padding-0-05-mobile{
         padding: 0 .5rem;
     }
+    .margin-top-5-mobile{
+      margin-top: 5rem;
+    }
 }
 
 @media (min-width: 769px) {
@@ -395,11 +398,13 @@ footer div span{
 @media (max-width: 768px) {
   .iframe{
     width: 100%;
+    height: 600px;
   }
 }
 
 @media (min-width: 769px) {
   .iframe{
     width: 70%;
+    height: 1500px;
   }
 }
