--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -24,11 +24,11 @@ reserve
 /* init */
 body{
     margin: 0;
-    color: #333;
+    color: #707070;
     font-family: a-otf-ryumin-pr6n, serif;
     font-style: normal;
     font-weight: 450;
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 a{
     text-decoration: none;
@@ -44,13 +44,13 @@ ul{
 }
 #body h2 {
   padding: 1rem 0;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
 }
 
 #body h3 {
   padding: .5rem 0;
   font-weight: normal;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
 }
 .pre_list li{
   padding-left: 1rem;
@@ -295,9 +295,6 @@ footer div span{
     #body .padding-0-05-mobile{
         padding: 0 .5rem;
     }
-    .margin-top-5-mobile{
-      margin-top: 5rem;
-    }
 }
 
 @media (min-width: 769px) {
@@ -314,7 +311,7 @@ footer div span{
 
 /* index */
 .oshirase_tag{
-  padding: 0.1rem .5rem;
+  padding: .3rem .5rem .1rem .5rem;
   background-color: #E4E4F7;
   border: 1px solid #707070;
   border-radius: 0.3rem;
